examples/Errors/110.zph
a # PT:10a;

a # CT:INT;
a # CT:MO;